2012-03-15  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* src/mcs/ID.cpp: Add value for belief mainkind.

	* testsuite/testAbstractContext.cpp: Typo.

	* src/parser/DLVResultGrammar.cpp: Fix parsing bug.

	* include/network/NewServer.h: Make use of HandlerWraper.
	* src/network/NewServer.cpp: Likewise.
	* src/network/NewHandler.cpp: Likewise.

	* include/network/NewHandler.h: Pass NewHandlerPtr around to keep the object alive.
	* src/network/NewHandler.cpp: Likewise.

	* include/network/HandlerWrapper.h: New file.

	* include/network/Makefile.am: Add HandlerWrapper.h.

	* include/mcs/NewContext.h: Use a wrapper to create bug-free thread.
	(Since boost::thread creates some temporary objects and makes copies of
	the object with operator()(), this might mess up the value inside the object).
	* include/mcs/RequestDispatcher.h: Likewise.

2012-03-13  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/Makefile.am: Add testSystem.

	* testsuite/testSystem.cpp: New file.
	* testsuite/DmcsClientTest.h: Likewise.
	* testsuite/DmcsClientTest.cpp: Likewise.

	* include/mcs/NewContext.h: Give leaf context null joiner dispatcher.
	* src/mcs/NewContext.cpp: Likewise.
	* testsuite/testAbstractContext.cpp: Adapt testcase.

2012-03-12  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* src/network/NewNeighborOut.cpp: Now also sends headers.

	* include/network/NewHandler.h: Now also receives headers.
	* src/network/NewHandler.cpp: Likewise.

	* include/network/Makefile.am: Add NewServer.h.
	* src/network/Makefile.am: Add NewServer.cpp.

	* include/network/NewServer.h: New file.
	* src/network/NewServer.cpp: Likewise.

	* include/mcs/Makefile.am: Add Registry.h.
	* include/mcs/Registry.h: New file.

	* include/mcs/NewMessage.h: New header.

2012-03-11  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/network/Makefile.am: Add NewHandler.h.
	* src/network/Makefile.am: Add NewHandler.cpp.

	* include/network/NewHandler.h: New file.
	* src/network/NewHandler.cpp: Likewise.
